--- a/alunos/editarAluno.html
+++ b/alunos/editarAluno.html
@@ -17,8 +17,8 @@
         </div>
 
         <nav class="nav-menu">
-            <a href="verAluno.html" class="nav-link active">Alunos</a>
-            <a href="#" class="nav-link">Professores</a>
+            <a href="index.html" class="nav-link active">Alunos</a>
+            <a href="../professores/index.html" class="nav-link">Professores</a>
             <a href="#" class="nav-link">Empresas</a>
             <a href="../index.html" class="nav-link">Turmas</a>
 
