--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="nav-menu">
             <a href="alunos/index.html" class="nav-link">Alunos</a>
             <a href="professores/index.html" class="nav-link">Professores</a>
-            <a href="#" class="nav-link">Empresas</a>
+            <a href="empresas/index.html" class="nav-link">Empresas</a>
             <a href="index.html" class="nav-link active">Turmas</a>
             <button class="btn-conta">
                 <img src="img/img_conta.png" alt="Conta">
