--- a/alunos/registarAluno.html
+++ b/alunos/registarAluno.html
@@ -19,7 +19,7 @@
         <nav class="nav-menu">
             <a href="index.html" class="nav-link active">Alunos</a>
             <a href="../professores/index.html" class="nav-link">Professores</a>
-            <a href="#" class="nav-link">Empresas</a>
+            <a href="../empresas/index.html" class="nav-link">Empresas</a>
             <a href="../index.html" class="nav-link">Turmas</a>
 
             <button class="btn-conta">
