Modularização das fases de estágio

--- a/aluno.html
+++ b/aluno.html
@@ -43,7 +43,7 @@
 
     <!-- Lista de pedidos -->
     <section class="pedidos-container">
-      <a href="confirmarDados.html">
+      <a href="estagios/confirmarDados.html">
         <article class="pedido-card">
           <h3 class="pedido-titulo">Pedido de estágio - 1</h3>
           <p class="pedido-label">Estado do estágio</p>
