Update modal ver conta no modulo de estagios

--- a/estagios/envioEmail.html
+++ b/estagios/envioEmail.html
@@ -179,10 +179,10 @@
           <span class="perfil-row-text">Definições de conta</span>
         </div>
 
-        <button type="button" class="perfil-logout-row">
+        <a href="../login.html" type="button" class="perfil-logout-row">
           <span class="perfil-back-icon">←</span>
           <span class="perfil-logout-text">Log out</span>
-        </button>
+        </a>
 
         <button type="button" class="perfil-voltar-btn">
           Voltar
