--- a/aluno.html
+++ b/aluno.html
@@ -23,8 +23,8 @@
             <a href="#" class="nav-link">Professores</a>
             <a href="#" class="nav-link">Empresas</a>
             <a href="index.html" class="nav-link active">Turmas</a>
-            <button class="btn-conta">
-                <img src="img/img_conta.png" alt="Conta">
+            <button class="btn-conta" id="btn-conta">
+                <img src="../img/img_conta.png" alt="Conta">
             </button>
             <a href="login.html" class="btn-sair">Sair</a>
         </nav>
@@ -78,6 +78,101 @@
       <img src="img/img_confinanciado.png" alt="Confinanciado">
     </div>
   </footer>
+
+    <!-- ======= POP-UP SALVAR ======= -->
+  <div id="popup-salvar" class="popup-overlay">
+    <div class="popup-box">
+      <p class="popup-text">Deseja salvar as informações?</p>
+
+      <div class="popup-actions">
+        <button type="button" class="popup-btn popup-cancel">Cancelar</button>
+        <button type="button" class="popup-btn popup-confirm">Sim</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- ======= MODAL PERFIL / CONTA ======= -->
+  <div id="perfil-overlay" class="perfil-overlay">
+    <div class="perfil-card">
+      <div class="perfil-banner"></div>
+
+      <div class="perfil-avatar">
+        <span class="perfil-avatar-icon">👤</span>
+      </div>
+
+      <div class="perfil-content">
+        <div class="perfil-role">Aluno</div>
+        <div class="perfil-name">Rodrigo Branco</div>
+
+        <div class="perfil-row">
+          <span class="perfil-row-icon">✉️</span>
+          <span class="perfil-row-text">240001087@esg.ipsantarem.pt</span>
+        </div>
+
+        <div class="perfil-row">
+          <span class="perfil-row-icon">⚙️</span>
+          <span class="perfil-row-text">Definições de conta</span>
+        </div>
+
+        <a href="../login.html" type="button" class="perfil-logout-row">
+          <span class="perfil-back-icon">←</span>
+          <span class="perfil-logout-text">Log out</span>
+        </a>
+
+        <button type="button" class="perfil-voltar-btn">
+          Voltar
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <script src="js/confirmarDados.js"></script>
+</body>
+</html>
+
+<script>
+    // -------- MODAL PERFIL / CONTA --------
+  const btnConta       = document.getElementById("btn-conta");
+  const perfilOverlay  = document.getElementById("perfil-overlay");
+  const perfilVoltar   = perfilOverlay ? perfilOverlay.querySelector(".perfil-voltar-btn") : null;
+  const perfilLogout   = perfilOverlay ? perfilOverlay.querySelector(".perfil-logout-row") : null;
+
+  if (!btnConta || !perfilOverlay) {
+    console.warn("Botão de conta ou overlay de perfil não encontrado.");
+  }
+
+  // Abrir modal de perfil
+  if (btnConta && perfilOverlay) {
+    btnConta.addEventListener("click", function () {
+      perfilOverlay.classList.add("show");
+    });
+  }
+
+  // Fechar ao clicar em "Voltar"
+  if (perfilVoltar && perfilOverlay) {
+    perfilVoltar.addEventListener("click", function () {
+      perfilOverlay.classList.remove("show");
+    });
+  }
+
+  // Fechar ao clicar fora do cartão
+  if (perfilOverlay) {
+    perfilOverlay.addEventListener("click", function (e) {
+      if (e.target === perfilOverlay) {
+        perfilOverlay.classList.remove("show");
+      }
+    });
+  }
+
+  // Ação de logout (por agora só consola;
+  // se quiseres podes redirecionar para login.html)
+  if (perfilLogout) {
+    perfilLogout.addEventListener("click", function () {
+      console.log("Log out clicado");
+      // window.location.href = "../login.html";
+    });
+  }
+</script>
 
 </body>
 
