--- a/envioEmail.html
+++ b/envioEmail.html
@@ -44,7 +44,7 @@
       <h1 class="titulo">Rodrigo Branco - 240001087</h1>
       <div class="acoes">
         <a class="btn-outline" href="confirmarDados.html">Voltar</a>
-        <a class="btn-primary" href="respostaEmail.html">Definir email como enviado</a>
+        <a class="btn-primary" href="escolhaAreaEmpresa.html">Definir email como enviado</a>
       </div>
     </div>
 
