--- a/alunos/verAluno.html
+++ b/alunos/verAluno.html
@@ -22,7 +22,7 @@
             <a href="../empresas/index.html" class="nav-link">Empresas</a>
             <a href="../index.html" class="nav-link">Turmas</a>
 
-            <button class="btn-conta">
+            <button class="btn-conta" id="btn-conta">
                 <img src="../img/img_conta.png" alt="Conta">
             </button>
             <a href="../login.html" class="btn-sair">Sair</a>
@@ -236,5 +236,44 @@
         </div>
     </footer>
 
+    <!-- ======= MODAL PERFIL / CONTA ======= -->
+  <div id="perfil-overlay" class="perfil-overlay">
+    <div class="perfil-card">
+      <div class="perfil-banner"></div>
+
+      <div class="perfil-avatar">
+        <span class="perfil-avatar-icon">👤</span>
+      </div>
+
+      <div class="perfil-content">
+        <div class="perfil-role">Aluno</div>
+        <div class="perfil-name">Rodrigo Branco</div>
+
+        <div class="perfil-row">
+          <span class="perfil-row-icon">✉️</span>
+          <span class="perfil-row-text">240001087@esg.ipsantarem.pt</span>
+        </div>
+
+
+        <a href="../verPerfil.html" type="button" class="perfil-row">
+          <span class="perfil-row-icon">⚙️</span>
+          <span class="perfil-row-text">Definições de conta</span>
+        </a>
+        
+
+        <a href="login.html" type="button" class="perfil-logout-row">
+          <span class="perfil-back-icon">←</span>
+          <span class="perfil-logout-text">Log out</span>
+        </a>
+
+        <button type="button" class="perfil-voltar-btn">
+          Voltar
+        </button>
+      </div>
+    </div>
+  </div>
+
+
+  <script src="js/verAluno.js"></script>
 </body>
 </html>
