--- a/estagios/avaliacao.html
+++ b/estagios/avaliacao.html
@@ -13,16 +13,16 @@
   <!-- Cabeçalho -->
     <header id="header">
         <div class="header-logo">
-            <a href="index.html">
+            <a href="../index.html">
                 <img src="../img/Logo.png" alt="Gestão de Estágios Universitários">
             </a>
         </div>
 
         <nav class="nav-menu">
-            <a href="alunos/index.html" class="nav-link">Alunos</a>
-            <a href="#" class="nav-link">Professores</a>
-            <a href="#" class="nav-link">Empresas</a>
-            <a href="index.html" class="nav-link active">Turmas</a>
+            <a href="../alunos/index.html" class="nav-link">Alunos</a>
+            <a href="../professores/index.html" class="nav-link">Professores</a>
+            <a href="../empresas/index.html" class="nav-link">Empresas</a>
+            <a href="../index.html" class="nav-link active">Turmas</a>
             <button class="btn-conta" id="btn-conta">
                 <img src="../img/img_conta.png" alt="Conta">
             </button>
@@ -154,7 +154,7 @@
     </div>
   </div>
 
-  <!-- ======= MODAL PERFIL / CONTA ======= -->
+<!-- ======= MODAL PERFIL / CONTA ======= -->
   <div id="perfil-overlay" class="perfil-overlay">
     <div class="perfil-card">
       <div class="perfil-banner"></div>
@@ -172,12 +172,14 @@
           <span class="perfil-row-text">240001087@esg.ipsantarem.pt</span>
         </div>
 
-        <div class="perfil-row">
+
+        <a href="verPerfil.html" type="button" class="perfil-row">
           <span class="perfil-row-icon">⚙️</span>
           <span class="perfil-row-text">Definições de conta</span>
-        </div>
+        </a>
+        
 
-        <a href="../login.html" type="button" class="perfil-logout-row">
+        <a href="login.html" type="button" class="perfil-logout-row">
           <span class="perfil-back-icon">←</span>
           <span class="perfil-logout-text">Log out</span>
         </a>
